[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unitree_sdk2py"
version = "1.0.1"
description = "Unitree robot sdk version 2 for python"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.8"
authors = [
    { name = "UnitreeRobotics", email = "unitree@unitree.com" },
]
dependencies = [
    "cyclonedds==0.10.2",
    "numpy",
    "opencv-python",
]

[project.urls]
"Source Code" = "https://github.com/unitreerobotics/unitree_sdk2_python"

[tool.setuptools.packages.find]
include = ["unitree_sdk2py*"]
namespaces = true

[tool.setuptools.package-data]
unitree_sdk2py = ["utils/lib/*.so"]
